Fix visual viewport scrolling contents size

In https://crrev.com/c1f0d945a5f04d7c2f47f1ef3164efbb6d698f16 [formerly cead2e78a8e7e9acba07fd4f3d6ab2c9b3713e18] I made it
so that a scrolling content layer must be at least as large as its
container layer. This is true for all scrollers except the visual
viewport.

The visual viewport's scrolling content is the layout viewport. The
layout viewport is sized based on the page's minimum scale factor. The
maximum scroll offset is calculated by multiplying the visual viewport's
content size by the current page scale factor. The constraint added in
the patch above meant that the maximum scroll offset was incorrect and
allowed scrolling outside the bounds of the document.

The fix here is to use the minimum scale factor in computing the minimum
contents size for the visual viewport.

Bug: 839383
Change-Id: I9d7c1a4ead4b05ef6624705b7dc189d9cc2855cf
Reviewed-on: https://chromium-review.googlesource.com/1073878
Reviewed-by: Philip Rogers <pdr@chromium.org>
Commit-Queue: David Bokan <bokan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#562486}
Former-commit-id: 292c5503e26e295328655cbdf82f62f829c77f51